# Retrieval-Augmented-Generation-RAG-chatbot

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260326_0001_create_documents_table.py  20260327_0002_create_document_chunks_table.py  20260327_0003_add_chunk_embedding_column.py
app/: main.py
app/api/v1/: router.py
app/api/v1/routes/: chat.py  documents.py  health.py
app/core/: config.py  logging.py
app/db/: session.py
app/db/models/: document.py  document_chunk.py
app/schemas/: chat.py  document.py
app/services/: chat.py  documents.py  embeddings.py  llm.py  retrieval.py
app/services/ingestion/: __init__.py  chunker.py  cleaner.py  parser.py
tests/: test_chat_ask.py  test_documents_upload.py  test_health.py  test_ingestion_pipeline.py
