[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "documind-ai"
version = "0.1.0"
description = "Portfolio-grade RAG chatbot backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "sqlalchemy>=2.0.35,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.6.0,<1.0.0",
    "mypy>=1.11.0,<2.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true
